openmetadata-docs/content/v1.1.x/how-to-guides/openmetadata/data-collaboration/index.md
---
title: Data Collaboration
slug: /how-to-guides/openmetadata/data-collaboration
---

# Overview of Data Collaboration

OpenMetadata is a catalyst for collaboration that brings data teams together to break the information silos, share organizational knowledge, and sort the data deluge. Users can add documentation, descriptions, and annotations to metadata to provide context and share knowledge about data assets. This encourages collaboration among data users and enhances data understanding.

There are three important aspects of data collaboration in OpenMetadata:
- **Conversations Threads:** Collaborate around data assets and tags by asking the right questions and discussing the details right within OpenMetadata.

- **Tasks:** Create tasks around data assets to create and update descriptions, request for tags, and initaite a glossary term approval workflow. 

- **Announcements:** Announce to your entire team about the upcoming events and changes such as deprecation, deletion, or schema changes.

Watch the video on how to use the collaboration features in OpenMetadata.

{%  youtube videoId="M6mbFLA1bQc" start="0:00" end="5:58" /%}